# c_cpp_projects

./: .clang-format  README.md  clang_commands.md
CppUTest/: CMakeLists.txt  cpputest.md
CppUTest/tests/: test.cpp
classes/: CMakeLists.txt  car.cpp  car.h  car_main.cpp
cmake_project/: CMakeLists.txt
pointers/: pointers.c
threading_ex/: CMakeLists.txt  main.cpp  readme.md
threading_ex/source/: CMakeLists.txt  threading_func.cpp
